Added index page styling and footer note and did some adjustment with bootstrap

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,22 @@
 <% layout('./layout/boilerplate.ejs') -%>
-<div>
-    <h1>hello World</h1>
+<div class="container">
+  <div class="row align-items-center mt-4">
+    <div class="col">
+      <h1>
+        Plan Your Event<br />
+        Book with Ease<br />
+        Celebrate in Style
+      </h1>
+      <p>
+        Discover a seamless event booking experience. From venues to vendors,
+        plan your perfect celebration with just a few clicks. Make every
+        occasion unforgettable!
+      </p>
+      <div class="mt-4">
+        <button class="btn btn-primary">Get Started</button>
+        <button class="btn btn-light">Know More</button>
+      </div>
+    </div>
+    <div class="col align-self-center"><img class="img-fluid" width="500" src="/images/home1.png" /></div>
+  </div>
 </div>
