--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,3 +1,8 @@
-<div>
-    <h1>________________</h1>
-</div>
+<footer class="bg-body-tertiary text-center text-lg-start mt-4">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2020 Copyright:
+      <a class="text-body" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
