--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -4,7 +4,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse  justify-content-between" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -19,6 +19,7 @@
             <a class="nav-link" aria-disabled="true">Disabled</a>
           </li>
         </ul>
+        <div class="ml-auto"><a href="/login"><button class="btn btn-dark">Login</button></a></div>
       </div>
     </div>
   </nav>
