--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -13,10 +13,10 @@
             <a class="nav-link" href="#">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-disabled="true">Disabled</a>
+            <a class="nav-link" href="/infopage">How it works?</a>
           </li>
         </ul>
         <div class="ml-auto"><a href="/login"><button class="btn btn-dark">Login</button></a></div>
