--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,7 +2,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2020 Copyright:
-      <a class="text-body" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      <a class="text-body" href="/">eventbooking.com</a>
     </div>
     <!-- Copyright -->
   </footer>
