--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,25 +1,55 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
-      <a class="navbar-brand" href="#">NAVBAR</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse  justify-content-between" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/infopage">How it works?</a>
-          </li>
-        </ul>
-        <div class="ml-auto"><a href="/login"><button class="btn btn-dark">Login</button></a></div>
+  <div class="container">
+    <a class="navbar-brand" href="#">NAVBAR</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div
+      class="collapse navbar-collapse justify-content-between"
+      id="navbarNav"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/infopage">How it works?</a>
+        </li>
+      </ul>
+      <% if (user) { %>
+
+      <div class="ml-auto">
+        <!-- Check if the user is logged in -->
+        <span><%= user.name.toUpperCase() %></span>
+        <button class="btn btn-dark ms-4">
+          <a class="text-white" href="/logout">Logout</a>
+        </button>
       </div>
+      <% } else { %>
+
+      <div class="ml-auto">
+        <a href="/login">
+        <button class="btn btn-outline-dark">Login
+        </button></a>
+        <a href="/signup">
+        <button class="btn btn-dark">Sign Up
+        </button></a>
+      </div>
+      <% } %>
     </div>
-  </nav>
+  </div>
+</nav>
